fixed dots alignment

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -183,9 +183,10 @@ footer{
   }
   .todos-title{
     border-top: 15px dotted #9393938d;
-    
-    border-radius: 21px 13px 0px 0px;
+    margin-left: 2%;
+    // border-radius: 21px 13px 0px 0px;
     margin-top: 2%;
+    width: 95%;
   }
 
 }
@@ -251,15 +252,16 @@ footer{
   grid-area: footer;
 
 }
-@media (min-width: 1200px){
+@media (min-width: 1280px){
   body{
     font-size: medium;
   }
 
   .todos-title{
     border-top: 19px dotted #9393938d;
-    border-radius: 21px 13px 0px 0px;
+    // border-radius: 21px 13px 0px 0px;
     margin-top: 3%;
+    // width: 95%;
   }
   
   .updates{
